Shows the users location and displays (animates) a marker

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,5 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MarkerFont" parent="@android:style/TextAppearance.Medium.Inverse" />
 </resources>
