--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     <com.flipboard.bottomsheet.BottomSheetLayout
         android:id="@+id/bottomsheet"
         android:layout_width="match_parent"
+        android:background="#00FFFFFF"
         android:layout_height="match_parent">
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
