--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/toolbar"
-                tools:context="com.buzzardparking.buzzard.activities.MainActivity"/>
+                tools:context=".activities.MapActivity"/>
 
         </RelativeLayout>
 
