--- a/app/src/main/res/layout/destination_detail_bottomsheet.xml
+++ b/app/src/main/res/layout/destination_detail_bottomsheet.xml
@@ -36,7 +36,19 @@
                 android:layout_height="wrap_content"
                 android:text="Address"
                 android:layout_below="@+id/tvBottomSheetHeading"
-                android:id="@+id/tvBottomSheetSubheading"/>
+                android:id="@+id/tvBottomSheetSubheading"
+                android:maxWidth="250dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvBottomSheetHeading"
+                android:layout_toRightOf="@id/tvBottomSheetSubheading"
+                android:layout_alignParentRight="true"
+                android:gravity="right"
+                android:visibility="gone"
+                android:text="11 min"
+                android:id="@+id/tvBottomSheetSubheadingRight"/>
         </RelativeLayout>
     </RelativeLayout>
     <android.support.design.widget.FloatingActionButton
