--- a/app/src/main/res/layout/destination_detail_bottomsheet.xml
+++ b/app/src/main/res/layout/destination_detail_bottomsheet.xml
@@ -14,42 +14,40 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:id="@+id/rlTopPiece"
             android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:id="@+id/rlTopPiece"
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/tvBottomSheetHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name"
-                android:id="@+id/tvBottomSheetHeading"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"/>
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Address"
-                android:layout_below="@+id/tvBottomSheetHeading"
                 android:id="@+id/tvBottomSheetSubheading"
-                android:maxWidth="250dp"
-                />
+                android:layout_below="@+id/tvBottomSheetHeading"
+                android:layout_toLeftOf="@+id/tvBottomSheetSubheadingRight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:gravity="left"/>
             <TextView
+                android:id="@+id/tvBottomSheetSubheadingRight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvBottomSheetHeading"
-                android:layout_toRightOf="@id/tvBottomSheetSubheading"
                 android:layout_alignParentRight="true"
                 android:gravity="right"
-                android:visibility="gone"
-                android:text="11 min"
-                android:id="@+id/tvBottomSheetSubheadingRight"/>
+                android:visibility="gone" />
         </RelativeLayout>
     </RelativeLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAction"
         android:layout_width="wrap_content"
