--- a/app/src/main/res/layout/destination_detail_bottomsheet.xml
+++ b/app/src/main/res/layout/destination_detail_bottomsheet.xml
@@ -43,8 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvBottomSheetHeading"
                 android:layout_alignParentRight="true"
-                android:gravity="right"
-                android:visibility="gone" />
+                android:gravity="right" />
         </RelativeLayout>
     </RelativeLayout>
 
