--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -10,10 +10,9 @@
     tools:context="com.buzzardparking.buzzard.activities.HistoryActivity">
 
     <ListView
+        android:id="@+id/lvParkingHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="138dp" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
