--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -6,7 +6,7 @@
             android:icon="@drawable/places_ic_search"
             android:title="@string/title_parking_history"/>
         <item
-            android:id="@+id/nav_second_fragment"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/places_ic_search"
             android:title="@string/title_settings"/>
     </group>
