Made the overview begin with a button

--- a/app/src/main/res/layout/destination_detail_bottomsheet.xml
+++ b/app/src/main/res/layout/destination_detail_bottomsheet.xml
@@ -7,10 +7,21 @@
     android:layout_height="wrap_content"
     app:behavior_hideable="true"
     app:layout_behavior="@string/bottom_sheet_behavior">
+    <Button
+        android:id="@+id/btnFindParking"
+        android:layout_width="match_parent"
+        android:padding="@dimen/activity_vertical_margin"
+        android:layout_height="wrap_content"
+        android:textColor="@color/textIconColor"
+        android:background="@color/colorPrimary"
+        android:drawableLeft="@drawable/ic_parking_accent"
+        android:text="@string/tap_to_park"/>
     <RelativeLayout
+        android:id="@+id/rlTopPieceContainer"
         android:layout_width="match_parent"
         android:layout_marginTop="24dp"
         android:background="@android:color/white"
+        android:visibility="gone"
         android:layout_height="wrap_content">
 
         <RelativeLayout
@@ -49,6 +60,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAction"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|right"
