improved marker laying experience

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -28,6 +28,21 @@
                 tools:context=".activities.MapActivity"/>
 
         </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/ivAddMarkerIcon"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:src="@drawable/decorated_spot_icon"
+                android:paddingBottom="50dp" />
+
+        </RelativeLayout>
+
 
         <include layout="@layout/destination_detail_bottomsheet" />
 
