--- a/app/src/main/res/layout/destination_detail_bottomsheet.xml
+++ b/app/src/main/res/layout/destination_detail_bottomsheet.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:behavior_hideable="true"
+    app:behavior_peekHeight="80dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
     <Button
         android:id="@+id/btnFindParking"
@@ -24,39 +25,53 @@
         android:visibility="gone"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:id="@+id/rlTopPiece"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            >
+            <RelativeLayout
+                android:id="@+id/rlTopPiece"
+                android:layout_width="match_parent"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tvBottomSheetHeading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"/>
+                <TextView
+                    android:id="@+id/tvBottomSheetHeading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="true"/>
+                <TextView
+                    android:id="@+id/tvBottomSheetSubheading"
+                    android:layout_below="@+id/tvBottomSheetHeading"
+                    android:layout_toLeftOf="@+id/tvBottomSheetSubheadingRight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:gravity="left"/>
+                <TextView
+                    android:id="@+id/tvBottomSheetSubheadingRight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvBottomSheetHeading"
+                    android:layout_alignParentRight="true"
+                    android:gravity="right" />
+                <fragment
+                    android:name="com.google.android.gms.maps.StreetViewPanoramaFragment"
+                    android:id="@+id/streetviewpanorama"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:layout_below="@+id/tvBottomSheetSubheading"/>
 
-            <TextView
-                android:id="@+id/tvBottomSheetSubheading"
-                android:layout_below="@+id/tvBottomSheetHeading"
-                android:layout_toLeftOf="@+id/tvBottomSheetSubheadingRight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:gravity="left"/>
-            <TextView
-                android:id="@+id/tvBottomSheetSubheadingRight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvBottomSheetHeading"
-                android:layout_alignParentRight="true"
-                android:gravity="right" />
-        </RelativeLayout>
-    </RelativeLayout>
+            </RelativeLayout>
+        </android.support.v4.widget.NestedScrollView>
+
+
+   </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAction"
