--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -35,10 +35,10 @@
                 android:id="@+id/ivAddMarkerIcon"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:src="@drawable/decorated_spot_icon"
+                android:src="@drawable/spot_add"
                 android:paddingBottom="50dp" />
 
         </RelativeLayout>
