--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0097A7</color>
     <color name="colorAccent">#FFC107</color>
     <color name="textIconColor">#FFFFFF</color>
+    <color name="ripple">#e0e7e9</color>
 </resources>
