--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -6,11 +6,11 @@
     <path
         android:pathData="M22.429,10.919L22.429,13.805A1,1 0,0 1,21.429 14.805L3.429,14.805A1,1 0,0 1,2.429 13.805L2.429,10.919A1,1 0,0 1,3.429 9.919L21.429,9.919A1,1 0,0 1,22.429 10.919z"
         android:strokeColor="#00000000"
-        android:fillColor="@color/colorPrimary"
+        android:fillColor="@color/textIconColor"
         android:strokeWidth="1"/>
     <path
         android:pathData="M13.872,22.362L10.986,22.362A1,1 0,0 1,9.986 21.362L9.986,3.362A1,1 0,0 1,10.986 2.362L13.872,2.362A1,1 0,0 1,14.872 3.362L14.872,21.362A1,1 0,0 1,13.872 22.362z"
         android:strokeColor="#00000000"
-        android:fillColor="@color/colorPrimary"
+        android:fillColor="@color/textIconColor"
         android:strokeWidth="1"/>
 </vector>
