--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fabMini_marginR">24dp</dimen>
+    <dimen name="fabMini_marginB">20dp</dimen>
     <dimen name="carmarker_size">100dp</dimen>
 </resources>
