--- a/app/src/main/res/layout/destination_detail_bottomsheet.xml
+++ b/app/src/main/res/layout/destination_detail_bottomsheet.xml
@@ -9,6 +9,20 @@
     app:layout_behavior="@string/bottom_sheet_behavior">
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/fabMini_marginB"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="@dimen/fabMini_marginR"
+        android:src="@drawable/ic_arrow_back_black_24dp"
+        android:scaleType="center"
+        android:visibility="visible"
+        app:backgroundTint="@color/colorWhite"
+        app:fabSize="mini" />
+
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabActionSecondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
