--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -31,26 +31,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <RelativeLayout
-                android:id="@+id/rlProgressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/progress_bar_background"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:visibility="gone"
-                android:padding="@dimen/pbPadding">
 
-                <cn.refactor.smileyloadingview.lib.SmileyLoadingView
-                    android:id="@+id/smileyLoadingView"
-                    xmlns:slv="http://schemas.android.com/apk/res-auto"
-                    android:layout_width="@dimen/pbSize"
-                    android:layout_height="@dimen/pbSize"
-                    slv:duration="2000"
-                    slv:strokeColor="@color/colorPrimary"
-                    slv:strokeWidth="@dimen/pbStroke"/>
-
-            </RelativeLayout>
+            <include layout="@layout/progress_bar" />
 
             <ImageView
                 android:id="@+id/ivAddMarkerIcon"
