--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,26 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activities.SettingsActivity">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".activities.SettingsActivity">
+
+    <include layout="@layout/toolbar"/>
 
     <Switch
         android:id="@+id/swExternalNavigation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/setting_navigation"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:text="@string/setting_navigation"/>
+
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btn_logout"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/swExternalNavigation"
-        android:onClick="logout"/>
+        android:layout_centerHorizontal="true"
+        android:onClick="logout"
+        android:text="@string/btn_logout"/>
+
+    <ImageView
+        android:id="@+id/ivProfileImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/button"
+        android:layout_marginTop="65dp"
+        android:minHeight="100dp"
+        android:minWidth="100dp"
+        android:src="@drawable/ic_person_black_24dp"
+        tools:src="@drawable/ic_person_black_24dp"/>
 </RelativeLayout>
