--- a/app/src/main/res/layout/destination_detail_bottomsheet.xml
+++ b/app/src/main/res/layout/destination_detail_bottomsheet.xml
@@ -98,8 +98,8 @@
                     <ImageView
                         android:id="@+id/ivStreetView"
                         android:layout_below="@id/tvBottomSheetSubheadingRight"
-                        android:layout_width="200dp"
-                        android:layout_height="100dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
                         android:scaleType="centerCrop"
                         android:adjustViewBounds="true" />
                     <!--<fragment-->
