--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -10,6 +10,7 @@
     <ListView
         android:layout_below="@+id/toolbar"
         android:id="@+id/lvParkingHistory"
+        android:divider="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
