--- a/app/src/main/res/layout/spot_item.xml
+++ b/app/src/main/res/layout/spot_item.xml
@@ -1,29 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/ivParkingSpot"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:src="@drawable/bg_no_data"/>
-
-    <TextView
-        android:id="@+id/tvParkingSpot"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
-        tools:text="Parking Location"/>
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        app:cardBackgroundColor="@color/colorWhite"
+        app:cardCornerRadius="1dp"
+        app:cardElevation="2dp"
+        >
 
-    <TextView
-        android:id="@+id/tvParkingTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
-        tools:text="Parking Details"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <ImageView
+                android:id="@+id/ivParkingSpot"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/spot_parked_marker"/>
+
+            <TextView
+                android:id="@+id/tvParkingTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ivParkingSpot"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="0dp"
+                android:textStyle="bold"
+                tools:text="September 1, 2016"/>
+
+            <TextView
+                android:id="@+id/tvParkingSpot"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_place_black_24dp"
+                android:layout_below="@id/tvParkingTime"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="0dp"
+                tools:text="Parking Location"/>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
