--- a/app/src/main/res/layout/destination_detail_bottomsheet.xml
+++ b/app/src/main/res/layout/destination_detail_bottomsheet.xml
@@ -118,6 +118,7 @@
                         android:id="@+id/tvParkingTimer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                         android:textSize="@dimen/fontH1"
                         android:layout_below="@+id/tvBottomSheetSubheading"/>
                     <!--<fragment-->
