--- a/app/src/main/res/layout/spot_item.xml
+++ b/app/src/main/res/layout/spot_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
@@ -27,7 +27,7 @@
             <ImageView
                 android:id="@+id/ivParkingSpot"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:src="@drawable/spot_parked_marker"/>
 
             <TextView
