Able to cancel adding a marker

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -34,28 +34,9 @@
 
             <include layout="@layout/progress_bar" />
 
-            <!--<ImageView-->
-                <!--android:id="@+id/ivAddMarkerIcon"-->
-                <!--android:layout_centerHorizontal="true"-->
-                <!--android:layout_centerVertical="true"-->
-                <!--android:visibility="visible"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:src="@drawable/spot_add"-->
-                <!--android:paddingBottom="50dp" />-->
-
-            <ImageView
-                android:id="@+id/ivAddMarkerIcon"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/spot_add_modal"
-                android:paddingTop="30dp"/>
+            <include layout="@layout/add_marker" />
 
         </RelativeLayout>
-
 
         <include layout="@layout/destination_detail_bottomsheet" />
 
