--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#00BCD4</color>
     <color name="colorPrimaryDark">#0097A7</color>
+    <color name="olderMarkerBackground">#a5005e68</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorAccent">#FFC107</color>
     <color name="textIconColor">#FFFFFF</color>
