--- a/app/src/main/res/layout/destination_detail_bottomsheet.xml
+++ b/app/src/main/res/layout/destination_detail_bottomsheet.xml
@@ -104,10 +104,23 @@
                         android:layout_below="@+id/tvBottomSheetHeading"
                         android:layout_alignParentRight="true"
                         android:gravity="right" />
+
+                    <TextView
+                        android:id="@+id/tvBottomSheetReporter"
+                        android:layout_below="@+id/tvBottomSheetSubheading"
+                        android:textSize="@dimen/body_text"
+                        android:textColor="@color/secondary_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/mbText"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_alignParentLeft="true"
+                        android:gravity="left"/>
+
                     <ImageView
                         android:id="@+id/ivStreetView"
                         android:layout_marginTop="@dimen/mbText"
-                        android:layout_below="@id/tvBottomSheetSubheading"
+                        android:layout_below="@id/tvBottomSheetReporter"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
                         android:layout_marginLeft="@dimen/imageMargin"
